--- a/src/app/modules/dialog-select-membership/dialog-select-membership.component.css
+++ b/src/app/modules/dialog-select-membership/dialog-select-membership.component.css
@@ -1,90 +1,20 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 .title {
     background-color: #eeeded;
     padding: 12px;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 700;
-  }
-
-.options {
-    display: flex;
-    width: 90%;
-    height: 300px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-    background-color: #f4f4f4;
-    border-radius: 15px;
 }
-
-.standar_membership {
-    width: 45%;
-    /*background-color: red;*/
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.aceptar{
+    background-color: #fd9727;
+    font-size: 20px;
+    height: 40px;
+    width: 200px;
 }
-
-.personalize_membership {
-    width: 45%;
-    /*background-color: green;*/
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.cancelar{
+    background-color: #000000;
+    font-size: 20px;
+    height: 40px;
+    color: white;
+    width: 200px;
 }
-
-.button_member {
-    width: 70%;
-    height: 200px;
-    display: flex;
-    flex-direction: column;
-    border-radius: 15px;
-    box-shadow: 2px 2px 3px #ccc;
-    background-color: #fff;
-}
-
-/*.personalize_membership_content {
-    width: 70%;
-    height: 200px;;
-    display: flex;
-    flex-direction: column;
-    border-radius: 15px;
-    box-shadow: 2px 2px 3px #ccc;
-    background-color: #fff;
-}*/
-
-.icon_option {
-    font-size: 3em;
-    padding-block: 50px;
-    /*background-color: yellow;*/
-    width: 90%;
-    margin: 0 auto;
-}
-
-.services_table table th,td {
-    text-align: center;
-}
-
-.responsive-div {
-    width: 100%; /* El div ocupa todo el ancho disponible */
-    height: 100%;
-    max-width: 1000px; /* Ancho máximo para evitar que se extienda demasiado en pantallas grandes */
-    max-height: 9000px;
-    margin: 0 auto; /* Centra el div horizontalmente en la pantalla */
-    padding: 20px; /* Agrega espaciado interno si es necesario */
-    /* Otros estilos personalizados para tu div */
-  }
-
-  .center-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-  
