--- a/src/app/modules/pago-mem/pago-mem.component.html
+++ b/src/app/modules/pago-mem/pago-mem.component.html
@@ -1,5 +1,5 @@
 <body>
-    <h1 style="margin-top: 65px;">Pago membresía </h1>
+    <h1 style="margin-top: 65px;">PAGO MEMBRESÍA </h1>
     <div class="row">
         <div class="container">
             <p>Filtro por fecha:</p>
