--- a/src/app/modules/service-dialog/service-dialog.component.css
+++ b/src/app/modules/service-dialog/service-dialog.component.css
@@ -7,6 +7,21 @@
     font-weight: 700;
 }
 
+.aceptar{
+    background-color: #fd9727; 
+    font-size: 20px; 
+    height: 40px; 
+    width: 200px;
+}
+
+.cancelar{
+    background-color: #000000; 
+    font-size: 20px;  
+    height: 40px;
+    color: white; 
+    width: 200px;
+}
+
 
 
 
