--- a/src/app/modules/alta-colaboradores/alta-colaboradores.component.html
+++ b/src/app/modules/alta-colaboradores/alta-colaboradores.component.html
@@ -1,6 +1,6 @@
 <div>
   <div>
-     <h1 class="title" mat-dialog-title>Agregar empleado</h1>
+     <h1 class="title" mat-dialog-title>AGREGAR EMPLEADO</h1>
      <div mat-dialog-content>
         <form [formGroup]="form">
            <div >
@@ -99,12 +99,8 @@
         </form>
      </div>
      <div mat-dialog-actions fxLayoutAlign="center center">
-        <div>
-           <button mat-raised-button (click)="registrar()" type="submit"  style="background-color: #fd9727; font-size: 20px; height: 40px; margin-right: 90px;width: 120px;">Aceptar</button>
-        </div>
-        <div style="display: flex; justify-content: center;">
-           <button mat-raised-button (click)="cerrarDialogo()" style="background-color: #000000; font-size: 20px; height: 40px;color: white; width: 120px;">Cancelar</button>
-        </div>
+           <button mat-raised-button (click)="registrar()" type="submit"  class="aceptar">Aceptar</button>
+           <button mat-raised-button (click)="cerrarDialogo()" class="cancelar">Cancelar</button>
      </div>
   </div>
 </div>
