--- a/src/app/modules/colaboradores/colaboradores.component.html
+++ b/src/app/modules/colaboradores/colaboradores.component.html
@@ -65,18 +65,24 @@
                 </button>
               </td>
             </ng-container>
-            <tr mat-header-row *matHeaderRowDef="['nombre', 'email', 'telefono','puesto','activar', 'acciones']"></tr>
-            <tr mat-row *matRowDef="let row; columns: ['nombre', 'email', 'telefono', 'puesto','activar','acciones'];"></tr>
+
+            <ng-container matColumnDef="contrasenia">
+              <th mat-header-cell *matHeaderCellDef> Restablecer </th>
+              <td mat-cell *matCellDef="let empleado">
+                <button mat-icon-button color="primary" (click)="OpenRestablecer(empleado)" [disabled]="!habilitarBoton">
+                  <mat-icon>lock_reset</mat-icon>
+                </button>
+              </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="['nombre', 'email', 'telefono','puesto','activar', 'acciones','contrasenia']"></tr>
+            <tr mat-row *matRowDef="let row; columns: ['nombre', 'email', 'telefono', 'puesto','activar','acciones','contrasenia'];"></tr>
           </table>
         </div>
         <mat-paginator [pageSizeOptions]="[5, 10, 15, 20]" showFirstLastButtons></mat-paginator>
       </div>
     </div> 
   </div>
- <!-- <div>
-    <br>
-    <button (click)="Sincronizar()">Sincronizar</button>
-  </div>-->
 </div>
 
 
