--- a/src/app/modules/crearProducto/crearProducto.component.css
+++ b/src/app/modules/crearProducto/crearProducto.component.css
@@ -112,3 +112,19 @@ table {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 700;
 }
+
+
+.aceptar{
+  background-color: #fd9727; 
+  font-size: 20px; 
+  height: 40px; 
+  width: 200px;
+}
+
+.cancelar{
+  background-color: #000000; 
+  font-size: 20px;  
+  height: 40px;
+  color: white; 
+  width: 200px;
+}
