--- a/src/app/modules/crearProducto/crearProducto.component.html
+++ b/src/app/modules/crearProducto/crearProducto.component.html
@@ -146,9 +146,9 @@
          </div>
       </div>
       <div style="display: flex; justify-content: center;" mat-dialog-actions>
-         <button *ngIf="isAdmin()" mat-raised-button (click)="registrarProd()"  style="background-color: #fd9727; font-size: 20px; margin-top: 17px; height: 40px; margin-right: 50px;">Aceptar</button>
-         <button *ngIf="isRecep()" mat-raised-button (click)="registrarP()"  style="background-color: #fd9727; font-size: 20px; margin-top: 17px; height: 40px; margin-right: 50px;">Aceptar</button>
-         <button mat-raised-button  (click)="cerrarDialogo()" style="background-color: #000000; font-size: 20px; margin-top: 17px; height: 40px;color: white;">Cancelar</button>
+         <button *ngIf="isAdmin()" mat-raised-button (click)="registrarProd()"  class="aceptar">Aceptar</button>
+         <button *ngIf="isRecep()" mat-raised-button (click)="registrarP()"  class="aceptar">Aceptar</button>
+         <button mat-raised-button  (click)="cerrarDialogo()" class="cancelar">Cancelar</button>
       </div>
    </div>
 </div>
