--- a/src/app/modules/editar-colaborador/editar-colaborador.component.css
+++ b/src/app/modules/editar-colaborador/editar-colaborador.component.css
@@ -94,3 +94,19 @@
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 700;
   }
+
+  .aceptar{
+    background-color: #fd9727; 
+    font-size: 20px; 
+    height: 40px; 
+    margin-right: 90px;
+    width: 20%;
+  }
+
+  .cancelar{
+    background-color: #000000; 
+    font-size: 20px;  
+    height: 40px;
+    color: white; 
+    width: 20%;
+  }
