--- a/src/app/modules/editar-producto/editar-producto.component.html
+++ b/src/app/modules/editar-producto/editar-producto.component.html
@@ -59,8 +59,8 @@
            </div>
        </div>
        <div style="display: flex; justify-content: center;" mat-dialog-actions>
-           <button mat-raised-button (click)="actualizar()" style="background-color: #fd9727; font-size: 20px; margin-top: 17px; height: 40px; margin-right: 90px;">Aceptar</button>
-           <button mat-raised-button (click)="cerrarDialogo()" style="background-color: #000000; font-size: 20px; margin-top: 17px; height: 40px;color: white;">Cancelar</button>
+           <button mat-raised-button (click)="actualizar()" class="aceptar">Aceptar</button>
+           <button mat-raised-button (click)="cerrarDialogo()" class="cancelar">Cancelar</button>
        </div>
    </div>
 </div>
