--- a/src/app/modules/emergente-historial-productos/emergente-historial-productos.component.css
+++ b/src/app/modules/emergente-historial-productos/emergente-historial-productos.component.css
@@ -7,3 +7,26 @@
 .grid .move-right {
     justify-self: end;  /* Alinea el elemento a la derecha */
 }
+
+.aceptar{
+    background-color: #fd9727; 
+    font-size: 20px; 
+    height: 40px; 
+    width: 200px;
+  }
+  
+  .cancelar{
+    background-color: #000000; 
+    font-size: 20px;  
+    height: 40px;
+    color: white; 
+    width: 200px;
+  }
+
+  .title {
+    background-color: #eeeded;
+    padding: 12px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 700;
+  }
