--- a/src/app/modules/plan-agregar/plan-agregar.component.html
+++ b/src/app/modules/plan-agregar/plan-agregar.component.html
@@ -1,7 +1,7 @@
 <div>
     <ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-pulse-sync" [fullScreen] = "true"><p style="color: white" > Cargando... </p></ngx-spinner>
 
-        <h1 class="title" mat-dialog-title>Agregar Plan</h1>
+        <h1 class="title" mat-dialog-title>AGREGAR PLAN</h1>
         
         <div mat-dialog-content>
             <form [formGroup]="formulariodePlan">
@@ -113,8 +113,8 @@
         </div>
         
         <div style="display: flex; justify-content: center;" mat-dialog-actions>
-            <button mat-stroked-button (click)="enviar()" style="background-color: #fd9727; font-size: 20px;  height: 40px; margin-right: 90px;">Aceptar</button>
-            <button mat-stroked-button (click)="cerrarDialogo()" style="background-color: #000000; font-size: 20px; height: 40px;color: white;">Cancelar</button>
+            <button mat-stroked-button (click)="enviar()" class="aceptar">Aceptar</button>
+            <button mat-stroked-button (click)="cerrarDialogo()" class="cancelar">Cancelar</button>
         </div>  
 </div>
 
