--- a/src/app/modules/plan-editar/plan-editar.component.css
+++ b/src/app/modules/plan-editar/plan-editar.component.css
@@ -87,3 +87,18 @@
     outline: 0;
     box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
   }
+
+  .aceptar{
+    background-color: #fd9727; 
+    font-size: 20px; 
+    height: 40px; 
+    width: 200px;
+  }
+
+  .cancelar{
+    background-color: #000000; 
+    font-size: 20px;  
+    height: 40px;
+    color: white; 
+    width: 200px;
+  }
