--- a/src/app/modules/registro/registro.component.css
+++ b/src/app/modules/registro/registro.component.css
@@ -41,9 +41,7 @@ button {
   margin-bottom: 10px;
 }
 
-button:hover {
-  background-color: #FFB54D;
-}
+
 
 .grid {
   display: grid;
@@ -52,3 +50,25 @@ button:hover {
 }
 
 
+.aceptar{
+  background-color: #fd9727; 
+  font-size: 20px; 
+  height: 40px; 
+  width: 200px;
+}
+
+.cancelar{
+  background-color: #000000; 
+  font-size: 20px;  
+  height: 40px;
+  color: white; 
+  width: 200px;
+}
+
+.title {
+  background-color: #eeeded;
+  padding: 12px;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 700;
+}
