--- a/src/app/modules/servicios-lista/servicios-lista.component.css
+++ b/src/app/modules/servicios-lista/servicios-lista.component.css
@@ -1,82 +1,25 @@
-
-
-table {
-    width: 100%;
-}
-
 .full-width {
-    font-size: 14px;
-    width: 100%;
+  font-size: 14px;
+  width: 100%;
 }
-
 .table-container {
-    overflow-x: auto; /* Permite desplazamiento horizontal */
-    max-width: 100%;  /* Evita que la tabla sea más ancha que el contenedor */
-  }
-
-/* CSS para el toggle button */
-.toggle-container {
-    float: left;
-    margin-right: 10px;
-  }
-  
-  .toggle-checkbox {
-    display: none; /* Oculta el checkbox nativo */
-  }
-  
-  .toggle-label {
-    display: inline-block;
-    width: 40px;
-    height: 20px;
-    background-color: #ccc;
-    border-radius: 10px;
-    position: relative;
-    cursor: pointer;
-  }
-  
-  .toggle-label:before {
-    content: '';
-    position: absolute;
-    width: 18px;
-    height: 18px;
-    background-color: #fff;
-    border-radius: 50%;
-    top: 1px;
-    left: 1px;
-    transition: transform 0.3s ease;
-  }
-  
-  /* Estilo para el toggle button cuando está activo */
-  .toggle-checkbox:checked + .toggle-label:before {
-    transform: translateX(20px);
-  }
-  
-  .toggle-checkbox:checked + .toggle-label {
-    background-color: #4CAF50; /* Color de fondo cuando está activo */
-    left: 0; /* Mantiene la "bolita" a la izquierda cuando está activo */
-  }
-
-  .button_eye {
-    width: 100%;
-    border: none;
-    background-color: #fff;
-  }
- 
- 
-  /*CARGANDO*/
+  overflow-x: auto;
+ /* Permite desplazamiento horizontal */
+  max-width: 100%;
+ /* Evita que la tabla sea más ancha que el contenedor */
+}
+/*CARGANDO*/
 .custom-spinner-container {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100%;
 }
-
 .custom-spinner {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-
 .spinner-circle {
   width: 80px;
   height: 80px;
@@ -85,14 +28,9 @@ table {
   border-top: 4px solid transparent;
   animation: spin 1s linear infinite;
 }
-
 .spinner-text {
   margin-top: 10px;
   font-weight: bold;
-  color: #000000; 
+  color: #000000;
 }
 
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
