--- a/src/app/modules/ventas/ventas.component.css
+++ b/src/app/modules/ventas/ventas.component.css
@@ -348,3 +348,21 @@ option {
 .button-container {
   margin-left: auto; /* Esto alinea el contenedor de botones a la derecha */
 }
+
+
+
+
+.aceptar{
+  background-color: #fd9727; 
+  font-size: 20px; 
+  height: 40px; 
+  width: 200px;
+}
+
+.cancelar{
+  background-color: #000000; 
+  font-size: 20px;  
+  height: 40px;
+  color: white; 
+  width: 200px;
+}
