--- a/src/app/modules/ventas/ventas.component.html
+++ b/src/app/modules/ventas/ventas.component.html
@@ -3,7 +3,7 @@
       <p style="color: white" > Cargando... </p>
    </ngx-spinner>
    
-   <div class="title header-container"  mat-dialog-title>
+   <div class="title"  mat-dialog-title>
       <label class="ventas-label">VENTAS</label>
    </div>
 
@@ -114,7 +114,7 @@
       </div>
    </div>
    <div style="display: flex; justify-content: center;" mat-dialog-actions>
-      <button  mat-raised-button style="font-size: 20px; margin-top: 17px;height: 40px;background-color: black; color: #ffffff;" (click)="imprimirResumen()">Pagar</button>
-      <button mat-stroked-button (click)="cerrarDialogo()" style="background-color: #fd9727; font-size: 20px; margin-top: 17px; height: 40px;color: rgb(0, 0, 0);">Cancelar</button>
+      <button  mat-raised-button class="aceptar" (click)="imprimirResumen()">Pagar</button>
+      <button mat-stroked-button (click)="cerrarDialogo()" class="cancelar">Cancelar</button>
    </div>
 </div>
