--- a/src/app/modules/mensaje-aceptar/mensaje-aceptar.component.css
+++ b/src/app/modules/mensaje-aceptar/mensaje-aceptar.component.css
@@ -7,7 +7,7 @@
   /* Estilos para el título del diálogo */
   .title {
     font-size: 1.6rem;
-    color: #164c16; /* Color principal */
+    color: #000000; /* Color principal */
     border-bottom: 2px solid #e0e0e0;
     background-color: #eeeded;
     text-align: center;
